# polkadot-android-community

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/: settings.json
.claude/docs/: README.md
.claude/docs/architecture/: chain-integration.md  chat-extension.md  coinage.md  data-transport.md  host-api-products.md  layered.md  maintainability.md  multi-module.md  statement-store-communication.md  transactions.md
.claude/docs/code/: database-and-scale.md  di-and-lifecycle.md  flow-operators-reference.md  naming-and-hygiene.md  navigation-and-routers.md  nova-widget-inventory.md  project-types-and-units.md  results-and-errors.md  state-management.md  testing.md  ui-compose.md  workers-and-background-sync.md
.claude/hooks/: check-kotlin-edit.sh  guard-protected-paths.sh
app/: build.gradle.kts  proguard-rules.pro
bindings/: build.gradle.kts
bindings/airdrop-vrf/: build.gradle.kts
bindings/airdrop-vrf/rust/: Cargo.toml
bindings/airdrop-vrf/rust/src/: lib.rs
bindings/bandersnatch-crypto/: build.gradle.kts
bindings/bandersnatch-crypto/rust/: Cargo.toml
bindings/bandersnatch-crypto/rust/.cargo/: config.toml
bindings/bandersnatch-crypto/rust/src/: lib.rs
bindings/hydra-dx-math/: build.gradle.kts
chains/: build.gradle.kts
common/: build.gradle.kts
config/detekt/: config.yml
database/: build.gradle.kts
design/: build.gradle.kts
developer-tools/: create_module.kts  rename-pcf-to-paritytech.sh  setup.sh
docs/: DEPLOYMENT.md  detekt.md  message-compaction-plan.md
feature/identity/: build.gradle.kts
feature/mobrules/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: generate-mnemonic.py  install-git-hooks.sh
scripts/git-hooks/: pre-commit
test-shared/: build.gradle.kts
tools/car-parser/: build.gradle.kts
tools/common/: build.gradle.kts
(+3775 files in other folders)
