[package]
authors = ['Parity Technologies']
edition = '2021'
license = 'Apache 2.0'
name = "bandersnatch-crypto"
repository = 'https://github.com/paritytech/polkadot-android-community'
version = "0.1.0"

[dependencies]
verifiable = { git = "https://github.com/paritytech/verifiable", rev = "f65b39df04f2f9a453d78550438b189c96785285", default-features = false, features = ["std"]}
jni = { version = "0.17.0", default-features = false }
toml_datetime = {version = "0.6.5"}

[profile.release]
strip = true
lto = true
opt-level = "s"

[lib]
name = "bandersnatch_crypto_java"
crate-type = ["cdylib"]
